b=207183 Smiley gets deleted, editor tries to manipulate whitespace in the -moz-user-select:all block r=jfrancis sr=kin